@@ -2,6 +2,7 @@ co.elastic.apm.agent.servlet.ServletInstrumentation
 co.elastic.apm.agent.servlet.ServletVersionInstrumentation$Init
 co.elastic.apm.agent.servlet.ServletVersionInstrumentation$Service
 co.elastic.apm.agent.servlet.FilterChainInstrumentation
+co.elastic.apm.agent.servlet.FilterInstrumentation
 co.elastic.apm.agent.servlet.AsyncInstrumentation$StartAsyncInstrumentation
 co.elastic.apm.agent.servlet.AsyncInstrumentation$AsyncContextInstrumentation
 co.elastic.apm.agent.servlet.RequestStreamRecordingInstrumentation
